# comma-services

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/plans/: 2026-02-08-comma-services-design.md
src/: app.rs  categories.rs  main.rs  systemd.rs
src/tui/: handler.rs  ui.rs
